src/test/resources/ttml/test-suite/pass/dur014-pass.ttml
<?xml version="1.0" encoding="UTF-8"?>
<!-- See corresponding fail test -->
<tt xml:lang="en"
    xmlns="http://www.w3.org/ns/ttml"
    xmlns:tts="http://www.w3.org/ns/ttml#styling">
  <head>
  </head>
  <body>
    <div>
      <p begin="0s" end="0.2s" tts:fontSize="200%">abcdefg<br/>あいうえおかきくけ</p>
      <p begin="0.7s" end="4s" tts:fontSize="200%">abcdefghijklmnopqrstuvwxyz<br/>あいうえおかきくけこさしすせそたち</p>
    </div>
  </body>
</tt>
