src/test/resources/ttml/test-suite/fail/ipd004-fail.ttml
<?xml version="1.0" encoding="UTF-8"?>
<!-- Max available rendering time (IPD) exceeded on non-initial ISD due to glyph drawing (CJK) -->
<tt xml:lang="en"
    xmlns="http://www.w3.org/ns/ttml"
    xmlns:tts="http://www.w3.org/ns/ttml#styling">
  <head>
  </head>
  <body>
    <div>
      <p begin="0s" end="1s" tts:fontSize="185%">a</p>
      <p begin="3s" end="4s" tts:fontSize="185%">あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめもやゆ</p>
    </div>
  </body>
</tt>
